--- a/src/public/sent.html
+++ b/src/public/sent.html
@@ -5,6 +5,24 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="bio links for contact">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://biolink-43ih.onrender.com/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Lex Monteverde - Links">
+  <meta property="og:description" content="bio links for contact">
+  <meta property="og:image"
+    content="https://github.com/Melldy-Monteverde/biolink2.0/blob/main/src/public/statics/biopic.jpg">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="biolink-43ih.onrender.com">
+  <meta property="twitter:url" content="https://biolink-43ih.onrender.com/">
+  <meta name="twitter:title" content="Lex Monteverde - Links">
+  <meta name="twitter:description" content="bio links for contact">
+  <meta name="twitter:image"
+    content="https://github.com/Melldy-Monteverde/biolink2.0/blob/main/src/public/statics/biopic.jpg">
   <title>Lex Monteverde - Links</title>
   <script src="https://kit.fontawesome.com/6ad2795456.js" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
