--- a/src/public/index.html
+++ b/src/public/index.html
@@ -11,8 +11,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Lex Monteverde - Links">
   <meta property="og:description" content="bio links for contact">
-  <meta property="og:image"
-    content="https://github.com/Melldy-Monteverde/biolink2.0/blob/main/src/public/statics/biopic.jpg">
+  <meta property="og:image" content="./statics/biopic.jpg">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
@@ -20,9 +19,9 @@
   <meta property="twitter:url" content="https://biolink-43ih.onrender.com/">
   <meta name="twitter:title" content="Lex Monteverde - Links">
   <meta name="twitter:description" content="bio links for contact">
-  <meta name="twitter:image"
-    content="https://github.com/Melldy-Monteverde/biolink2.0/blob/main/src/public/statics/biopic.jpg">
+  <meta name="twitter:image" content="./statics/biopic.jpg">
   <title>Lex Monteverde - Links</title>
+  <link rel="icon" type="image/x-icon" href="./favicon.png">
   <script src="https://kit.fontawesome.com/6ad2795456.js" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
@@ -46,6 +45,11 @@
       </li>
       <li class="li-links">
         <a href="#" id="btn-portfolio" class="links"><span class="fas fa-code"></span> Portfolio</a>
+      </li>
+
+      <li class="li-links">
+        <a href="./statics/cv_Melldy_Monteverde.pdf" id="btn-portfolio" class="links"><span
+            class="fas fa-sticky-note"></span> Download my CV</a>
       </li>
     </ul>
   </main>
