fix CV in sent page

--- a/src/public/sent.html
+++ b/src/public/sent.html
@@ -48,6 +48,10 @@
       <li class="li-links">
         <a href="#" id="btn-portfolio" class="links"><span class="fas fa-code"></span> Portfolio</a>
       </li>
+      <li class="li-links">
+        <a href="./statics/cv_Melldy_Monteverde.pdf" id="btn-portfolio" class="links"><span
+            class="fas fa-sticky-note"></span> Download my CV</a>
+      </li>
     </ul>
   </main>
 
